@@ -452,8 +452,22 @@ img.bouton_edit_composant:hover {
   border : [(#GET{foncee})] 0px solid;
   -moz-border-radius: 0;
 }
-
-[(#REM) Position de l'image signalant un chargement en ajax ]
-.image_loading {
+[(#REM) Position de l'image signalant un chargement en ajax 
+].image_loading {
   position: absolute;
+}
+[(#REM) Style du selecteur d'admins
+].acs_editer_admins .highlight.off {
+  display :inline;
+  background: none;
+  font-weight: normal;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+.acs_editer_admins a.highlight {
+  background: #GET{claire};
+  font-weight: bold;
+}
+.acs_editer_admins a.highlight.off:hover {
+  background: #GET{claire};
 }
