@@ -3,8 +3,10 @@
 #          (Plugin Spip)
 #     http://acs.geomaticien.org
 #
-# Copyright Daniel FAIVRE, 2007-2008
+# Copyright Daniel FAIVRE, 2007-2010
 # Copyleft: licence GPL - Cf. LICENCES.txt
+#
+# Recherche un admin en ajax
 
 if (!defined("_ECRIRE_INC_VERSION")) return;
 
@@ -14,11 +16,11 @@ if (!defined("_ECRIRE_INC_VERSION")) return;
 function exec_acs_rechercher_admin_dist()
 {
 	$idom = _request('idom');
-	if (!preg_match('/\w+/',$idom))
-	      {include_spip('minipres');
+	if (!preg_match('/\w+/',$idom)) {
+		include_spip('minipres');
 		echo minipres();
 		exit;
-	      }
+  }
 
 	$where = split("[[:space:]]+", _request('nom'));
 	if ($where) {
@@ -26,8 +28,9 @@ function exec_acs_rechercher_admin_dist()
 			$where[$k] = "'%" . substr(str_replace("%","\%", _q($v)),1,-1) . "%'";
 		$where= ("(nom LIKE " . join(" AND nom LIKE ", $where) . ")");
 	}
-	
+
 	$admid = _request('admid');
+	acs_log("exec_acs_rechercher_admin("._request('nom').", $idom, $admid)");
 	
 	$q = spip_query("SELECT * FROM spip_auteurs WHERE $where AND statut='0minirezo' ORDER BY nom");
 	include_spip('inc/acs_selectionner_admin');
